--- a/room/index.html
+++ b/room/index.html
@@ -294,7 +294,7 @@
       </div>
    </main>
    <footer class="footer-box">
-      <div class="container-flex">
+      <div class="container-flex footer-info">
          <div>
             <p class="tittle-footer">Case Studies</p>
             <p class="footer-img-cyclists"><img src="./imgs/footer-img.svg" alt="cyclists"></p>
